Made sure that .content1 has display: flex; and a background color and gap properties. Made additions to font color, size, and positive for the .welcometext and .intro that are the displayed text with correct positioning. For the .signup button, I added position, background-color, border-color, width, height, and border-radius properties to make the button more presentable. I resized the .nightcity image and I aded both box-shadow and position properties.

--- a/style.css
+++ b/style.css
@@ -28,10 +28,41 @@
   position: relative; right: 100px; bottom: 50px;
 }
 
+.content1 {
+  display: flex;
+  background: #1f2937;
+  gap: 200px;
+}
+
+.textcontainer1 {
+  color: white;
+}
+
+.welcometext {
+  font-size: 50px;
+  position: relative; left: 150px; bottom: 75px;
+}
+
+.intro {
+  font-size: 25px;
+  position: relative; left: 150px; bottom: 75px;
+  inline-size: 500px;
+}
+
+.signup {
+  position: relative; left: 150px; bottom: 75px;
+  background-color: antiquewhite;
+  border-color: rgb(213, 214, 198);
+  width: 90px;
+  height: 30px;
+  border-radius: 100px;
+}
 
 .nightcity {
-  max-height: 10000px;
-  max-width: 10000px;
-  width: 1900px;
-  height: 700px;
+  max-height: 500px;
+  max-width: 5000px;
+  width: 800px;
+  height: 400px;
+  position: relative; left: 300px; bottom: 75px;
+  box-shadow: 0 5px 15px 10px rgba(61, 61, 61, 0.2), 0 5px 15px 10px rgba(252, 252, 252, 0.19);
 }
